# rapidjson_vs_nlohmann

./: CMakeLists.txt  readme.md
benchmark/: utility.h  values_description.cpp  values_description.h
nlohmann_benchmark/: CMakeLists.txt  constants.h  main.cpp  tests.h  utility.cpp
